# ai-metrics

./: .gitignore  Cargo.toml  LICENSE  MEMORY.md  README.md
.github/workflows/: ci.yml
crates/ai-ledger-bench/: Cargo.toml
crates/ai-ledger-bench/src/: lib.rs
crates/ai-ledger-cli/: Cargo.toml
crates/ai-ledger-cli/src/: main.rs
crates/ai-ledger-cli/tests/: cli.rs
crates/ai-ledger-core/: Cargo.toml
crates/ai-ledger-core/src/: lib.rs
crates/ai-ledger-eval/: Cargo.toml
crates/ai-ledger-eval/src/: lib.rs
crates/ai-ledger-event/: Cargo.toml
crates/ai-ledger-event/src/: lib.rs
crates/ai-ledger-export-otel/: Cargo.toml
crates/ai-ledger-export-otel/src/: lib.rs
crates/ai-ledger-export-splunk/: Cargo.toml
crates/ai-ledger-export-splunk/src/: lib.rs
crates/ai-ledger-log/: Cargo.toml
crates/ai-ledger-log/src/: lib.rs
crates/ai-ledger-manifest/: Cargo.toml
crates/ai-ledger-manifest/src/: lib.rs
crates/ai-ledger-policy/: Cargo.toml
crates/ai-ledger-policy/src/: lib.rs
crates/ai-ledger-report/: Cargo.toml
crates/ai-ledger-report/src/: lib.rs
docs/: ai-ledger-codex-starting-spec.md  architecture.md
docs/memory/: current-state.md  known-failures.md  open-questions.md
docs/memory/sessions/: 2026-05-02-pr-review-fixes.md  2026-05-02-start-ai-ledger-implementation.md
wiki/: Architecture.md  CLI-Quickstart.md  Event-Log.md  Home.md  Privacy-Model.md  Roadmap.md
